--- a/css/grid.css
+++ b/css/grid.css
@@ -12,7 +12,7 @@
   background-color: #2c2c2c;
   border-radius: 0.5rem;
   color: #fff;
-  padding: 20px;
+  padding: 5px;
   font-size: 4em;
   letter-spacing: 0.1em;
   display: flex;
