--- a/css/nest.css
+++ b/css/nest.css
@@ -11,18 +11,18 @@
 
 .title {
   grid-area: title;
-  grid-column: 1 / span 2;
-  grid-row: 2 / span 1;
-  font-size: 38px;
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+  font-size: 30px;
   font-weight: 800;
-  padding-left: 50px;
+  padding-left: 4px;
 }
 
 .description {
   grid-area: description;
-  grid-column: 2 / span 3;
+  grid-column: 2 / span 1;
   font-size: 16px;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .grid__header a {
@@ -34,7 +34,7 @@
   background-color: #800000;
   outline: none;
   border-radius: 8px;
-  margin-top: 20px;
+  margin-top: 40px;
   padding: 15px 25px;
   cursor: pointer;
 }
